--- a/notebooks/01_weekly_nfl_games.ipynb
+++ b/notebooks/01_weekly_nfl_games.ipynb
@@ -1743,6 +1743,27 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 16,
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (2824630538.py, line 317)",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[1;36m  Cell \u001B[1;32mIn [16], line 317\u001B[1;36m\u001B[0m\n\u001B[1;33m    away_vs_home_text = game_info[\"away_team\"] + TEXT_SPACE + TEXT_AT_SIGN + TEXT_SPACE +\u001B[0m\n\u001B[1;37m                                                                                         ^\u001B[0m\n\u001B[1;31mSyntaxError\u001B[0m\u001B[1;31m:\u001B[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "outputs": [],
    "source": [],
